<resources>
    <string name="app_name" translatable="false">BSUIR Schedule</string>

    <string name="notification_group_actions_label">Schedule actions</string>
    <string name="notification_channel_update_label">Updates</string>

    <string name="notification_update_title">Schedule update for %1$s is available</string>
    <string name="notification_update_description">Tap for update</string>

    <string name="action_discard">Discard</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_ok">OK</string>

    <string name="error_loading">Something went wrong,\nretry later</string>
    <string name="error_loading_secondary">Also try update information in settings</string>

    <string name="add_schedule_title">Add new schedule</string>
    <string name="add_schedule_error_types_not_specified">Please, select type</string>
    <string name="add_schedule_error_empty_suggestions">Please, update information</string>
    <string name="add_schedule_error_blank_schedule_name">Please, enter schedule name</string>
    <string name="add_schedule_error_unknown_schedule">Unknown schedule</string>
    <string name="add_schedule_hint_enter_schedule">Enter schedule</string>
    <string name="add_schedule_tab_employees">Employees</string>
    <string name="add_schedule_tab_students">Students</string>
    <string name="add_schedule_msg_type">Type:</string>

    <string name="info_load_title">Info loading</string>
    <string name="info_load_message">Information is loading,\nplease wait</string>

    <string name="navigation_title_classes">Classes</string>
    <string name="navigation_title_exams">Exams</string>
    <string name="navigation_title_part_time">Part-time</string>
    <string name="navigation_action_add_schedule">Add schedule</string>
    <string name="navigation_action_settings">Settings</string>
    <string name="navigation_msg_no_schedules">No Schedules</string>
    <string name="navigation_msg_schedule_update_in_progress">Updating</string>
    <string name="navigation_msg_schedule_update_error">Not updated</string>
    <string name="navigation_msg_schedule_update_available">Update is available</string>
    <string name="navigation_msg_schedule_update_success">Updated</string>
    <string name="navigation_hint_schedule_actions">You can swipe left to delete schedule, or swipe right to update</string>

    <string name="update_schedule_classes_title">Classes schedule for %1$s has changed!</string>
    <string name="update_schedule_exams_title">Exams schedule for %1$s has changed!</string>
    <string name="update_schedule_action_update">Update</string>
    <string name="update_schedule_action_cancel">Cancel</string>
    <string name="update_schedule_action_not_remind">Don\'t remind</string>

    <string name="start_message">Hello</string>

    <string name="display_schedule_tab_title">%1$s, Week %2$d</string>

    <string name="display_schedule_item_msg_subgroup">%1$d subgroup</string>
    <string name="display_schedule_item_msg_week_numbers">weeks: %1$s</string>
    <string name="display_schedule_item_msg_empty_list">Nothing there</string>
    <string name="display_schedule_hint_schedule_actions">You can view details by single tap on item, or modify by long tap</string>
    <string name="display_schedule_hint_exam_actions">You can view details by single tap on item, or modify by long tap</string>

    <string name="display_options_sheet_title_type">Display by %1$s</string>
    <string name="display_options_sheet_msg_type_weeks">weeks</string>
    <string name="display_options_sheet_msg_type_days">days</string>
    <string name="display_options_sheet_title_subgroup">Display %1$d subgroup</string>
    <string name="display_options_sheet_title_all_group">Display all group</string>

    <string name="schedule_item_options_sheet_title">%1$s</string>
    <string name="schedule_item_options_sheet_action_edit">Edit</string>
    <string name="schedule_item_options_sheet_action_delete">Delete</string>

    <string name="modify_schedule_item_title_edit">Edit %1$s</string>
    <string name="modify_schedule_item_title_add">Add new %1$s</string>
    <string name="modify_schedule_item_msg_exam">exam</string>
    <string name="modify_schedule_item_msg_lesson">class</string>
    <string name="modify_schedule_item_action_done">Done</string>
    <string name="modify_schedule_item_hint_subject">Subject</string>
    <string name="modify_schedule_item_label_type">Type:</string>
    <string name="modify_schedule_item_label_weekday">Day:</string>
    <string name="modify_schedule_item_label_week_numbers">Week:</string>
    <string name="modify_schedule_item_label_start_time">Start time:</string>
    <string name="modify_schedule_item_label_end_time">End time:</string>
    <string name="modify_schedule_item_label_groups">Groups:</string>
    <string name="modify_schedule_item_label_employees">Employees:</string>
    <string name="modify_schedule_item_label_subgroup_number">Subgroup:</string>
    <string name="modify_schedule_item_label_auditories">Auditories:</string>
    <string name="modify_schedule_item_hint_note">Note</string>
    <string name="modify_schedule_item_label_priority">Priority:</string>
    <string name="modify_schedule_item_label_date">Date:</string>
    <string name="modify_schedule_item_action_add">add</string>
    <string name="modify_schedule_item_title_select_type">Select lesson type</string>
    <string name="modify_schedule_item_title_select_priority">Select priority</string>
    <string name="modify_schedule_item_title_select_subgroup">Select subgroup</string>
    <string name="modify_schedule_item_title_select_weekday">Select weekday</string>
    <string name="modify_schedule_item_title_select_weeknumber">Select weeks</string>
    <string name="modify_schedule_item_title_discard_changes">Discard changes?</string>

    <string name="lesson_priotity_lowest">Lowest</string>
    <string name="lesson_priotity_low">Low</string>
    <string name="lesson_priotity_medium">Medium</string>
    <string name="lesson_priotity_high">High</string>

    <string name="subgroup_number_all">All group</string>
    <string name="subgroup_number_first">First</string>
    <string name="subgroup_number_second">Second</string>

    <string name="staff_list_hint_enter_group_number">Enter group number</string>
    <string name="staff_list_hint_enter_employee_name">Enter employee name</string>
    <string name="staff_list_hint_enter_auditory">Enter auditory</string>
    <string name="staff_list_msg_group_course">Course: %1$d</string>
    <string name="staff_list_msg_employee_department">Department: %1$s</string>
    <string name="staff_list_msg_auditory_capacity">Capacity: %1$d</string>
    <string name="staff_list_msg_empty">Not found</string>

    <string name="options_dialog_action_done">done</string>

    <string name="settings_title">Settings</string>
    <string name="settings_action_change_theme">Theme: %1$s</string>
    <string name="settings_action_update_info">Update information</string>
    <string name="settings_msg_update_info">Update employees &amp; groups</string>
    <string name="settings_action_rate_app">Rate app</string>
    <string name="settings_action_send_feedback">Send feedback</string>
    <string name="settings_action_privacy_policy">Privacy policy</string>
    <string name="settings_label_version">Version:</string>
    <string name="settings_feedback_email_subject" translatable="false">Feedback for Bsuir Schedule</string>
    <string name="settings_feedback_email_address" translatable="false">ilyapechuro991@gmail.com</string>
    <string name="settings_title_select_theme">Select theme</string>

    <string name="theme_follow_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_indigo">Indigo</string>
    <string name="theme_teal">Teal</string>
    <string name="theme_blue_grey">Blue-grey</string>
    <string name="theme_blue_white">Blue-white</string>
    <string name="theme_brown">Brown</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_cyan">Cyan</string>
    <string name="theme_red">Red</string>
    <string name="theme_lime">Lime</string>

    <string name="configure_schedule_widget_title">Add new widget</string>
    <string name="configure_schedule_widget_msg_exit">Discard changes?</string>
    <string name="configure_schedule_widget_action_done">Done</string>
    <string name="configure_schedule_widget_action_msg_select_schedule">Select schedule:</string>
    <string name="configure_schedule_widget_action_go_to_app">Go to app</string>
    <string name="configure_schedule_widget_error_empty_schedules">Please, add at least one schedule from main app</string>
    <string name="configure_schedule_widget_label_theme">Theme:</string>

    <string name="schedule_widget_msg_today">, Today</string>
    <string name="schedule_widget_msg_tomorrow">, Tomorrow</string>
    <string name="schedule_widget_msg_exams">, Exams</string>
    <string name="schedule_widget_msg_deleted">Deleted schedule</string>
    <string name="schedule_widget_msg_empty">Nothing there</string>

    <string name="item_details_title" translatable="false">%1$s(%2$s)</string>
    <string name="item_details_msg_location">Location:</string>
    <string name="item_details_msg_weeks">Weeks: </string>
    <string name="item_details_msg_subgroup">Subgroup: </string>
    <string name="item_details_msg_priority">Priority: </string>
    <string name="item_details_msg_time">Time: </string>
    <string name="item_details_msg_date">Date: </string>

    <string name="rate_app_description">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_app_action_rate">Rate now</string>
    <string name="rate_app_action_no">No, thanks</string>
    <string name="rate_app_action_later">Later</string>

    <string-array name="lesson_types">
        <item>ЛК</item>
        <item>ПЗ</item>
        <item>ЛР</item>
    </string-array>

    <string-array name="exam_types">
        <item>Экзамен</item>
        <item>Консультация</item>
    </string-array>

    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>