<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pechuro.bsuirschedule.widget.LoaderView
        android:id="@+id/settingsInfoLoadLoaderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:message="@string/info_load_message" />

    <LinearLayout
        android:id="@+id/settingActionParentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/settings_title"
            app:titleTextAppearance="@style/TitleTextAppearance"
            app:titleTextColor="?attr/titleColor" />

        <View
            android:id="@+id/settingsToolbarDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerColor" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsThemeButton"
                    style="@style/SettingsButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/settings_action_change_theme" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsUpdateInfoButton"
                    style="@style/SettingsButton"
                    android:text="@string/settings_action_update_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsThemeButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsPrivacyPoliceButton"
                    style="@style/SettingsButton"
                    android:text="@string/settings_action_privacy_policy"
                    app:layout_constraintBottom_toTopOf="@+id/settingsSendFeedbackButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsUpdateInfoButton"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsSendFeedbackButton"
                    style="@style/SettingsButton"
                    android:text="@string/settings_action_send_feedback"
                    app:layout_constraintBottom_toTopOf="@+id/settingsRateAppButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsRateAppButton"
                    style="@style/SettingsButton"
                    android:text="@string/settings_action_rate_app"
                    app:layout_constraintBottom_toTopOf="@+id/settingsVersionText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.pechuro.bsuirschedule.widget.LabeledTextView
                    android:id="@+id/settingsVersionText"
                    style="@style/ModifyItemLabeledText"
                    android:padding="16dp"
                    app:label_text="@string/settings_label_version"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsInfoLoadErrorParentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settingsInfoLoadErrorText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/error_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsInfoLoadErrorButton"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/action_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>