<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigationSheetParentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sheet"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scheduleItemOptionsTitle"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="24sp"
        tools:text="@string/schedule_item_options_sheet_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheduleItemOptionsEditButton"
        style="@style/NavigationButton"
        android:layout_marginTop="4dp"
        android:text="@string/schedule_item_options_sheet_action_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheduleItemOptionsDeleteButton"
        style="@style/NavigationButton"
        android:text="@string/schedule_item_options_sheet_action_delete" />
</LinearLayout>