<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/configureScheduleWidgetToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_cross"
        app:title="@string/configure_schedule_widget_title"
        app:titleTextAppearance="@style/TitleTextAppearance"
        app:titleTextColor="?attr/titleColor">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/configureScheduleWidgetDoneButton"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:enabled="false"
            android:text="@string/configure_schedule_widget_action_done"
            android:textSize="16sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/configureScheduleWidgetToolbarDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerColor" />

    <com.pechuro.bsuirschedule.widget.LabeledTextView
        android:id="@+id/configureScheduleWidgetSubgroupNumber"
        style="@style/ModifyItemLabeledText"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        app:label_text="@string/modify_schedule_item_label_subgroup_number"
        app:text_size="22sp"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/configureScheduleWidgetSelectScheduleText"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/configure_schedule_widget_action_msg_select_schedule"
        android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/configureScheduleWidgetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        tools:listitem="@layout/item_navigation_sheet_content"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/configureScheduleWidgetEmptySchedulesParentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/configureScheduleWidgetEmptySchedulesText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/configure_schedule_widget_error_empty_schedules"
            app:layout_constraintBottom_toTopOf="@+id/configureScheduleWidgetGoToAppButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/configureScheduleWidgetGoToAppButton"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:padding="16dp"
            android:text="@string/configure_schedule_widget_action_go_to_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>