<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/navigationDrawerItemContentText"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:textSize="16sp"
        app:backgroundTint="?attr/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/navigationDrawerItemContentUpdateParentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/navigationDrawerItemContentText"
        app:layout_constraintTop_toBottomOf="@+id/navigationDrawerItemContentText">

        <com.pechuro.bsuirschedule.widget.DotAnimatedTextView
            android:id="@+id/navigationDrawerItemContentUpdateLoaderView"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_msg_schedule_update_in_progress"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/navigationDrawerItemContentUpdateSuccessText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_msg_schedule_update_success"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/navigationDrawerItemContentUpdateErrorText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_msg_schedule_update_error"
            android:textSize="16sp"
            android:visibility="gone" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
